--- a/Projekt3.html
+++ b/Projekt3.html
@@ -126,7 +126,7 @@
 
 		// -------------------------------------- geo data
 
-		const geoFile = "./world_countries_geojson.geojson";
+		const geoFile = "./world_map_ar.geojson.geojson";
 		const dataFile = "./MinivisualiseringData3.csv";
 		// store global objects here
 		var map = {};
