#   fixed dataframe from null columns

--- a/Projekt3.html
+++ b/Projekt3.html
@@ -127,7 +127,7 @@
 		// -------------------------------------- geo data
 
 		const geoFile = "./world_map_ar.geojson.geojson";
-		const dataFile = "./MinivisualiseringData3.csv";
+		const dataFile = "./FixDataCSV.csv";
 		// store global objects here
 		var map = {};
 		var dataset = {};
